<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2019, RTE (http://www.rte-france.com)
    This Source Code Form is subject to the terms of the Mozilla Public
    License, v. 2.0. If a copy of the MPL was not distributed with this
    file, You can obtain one at http://mozilla.org/MPL/2.0/.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.powsybl</groupId>
        <artifactId>powsybl-parent</artifactId>
        <version>20.2</version>
        <relativePath/>
    </parent>
    <artifactId>powsybl-diagram</artifactId>
    <version>4.10.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>PowSyBl Diagram</name>
    <description>PowSyBl Diagram parent project</description>
    <url>http://www.powsybl.org</url>

    <scm>
        <connection>scm:git:https://github.com/powsybl/powsybl-diagram.git</connection>
        <developerConnection>scm:git:https://github.com/powsybl/powsybl-diagram.git</developerConnection>
        <url>https://github.com/powsybl/powsybl-diagram</url>
    </scm>

    <developers>
        <developer>
            <name>Florian DUPUY</name>
            <email>florian.dupuy@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>
        <developer>
            <name>Geoffroy JAMGOTCHIAN</name>
            <email>geoffroy.jamgotchian@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>
        <developer>
            <name>Benoit JEANSON</name>
            <email>benoit.jeanson@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>
    </developers>

    <modules>
        <module>distribution-diagram</module>
        <module>network-area-diagram</module>
        <module>single-line-diagram</module>
        <module>diagram-util</module>
        <module>diagram-test</module>
    </modules>

    <properties>
        <java.version>17</java.version>

        <sonar.coverage.jacoco.xmlReportPaths>
            ../distribution-diagram/target/site/jacoco-aggregate/jacoco.xml,
            ../../distribution-diagram/target/site/jacoco-aggregate/jacoco.xml,
        </sonar.coverage.jacoco.xmlReportPaths>

        <sonar.exclusions>
            **/generated/**/*
        </sonar.exclusions>

        <powsybl-core.version>6.8.1</powsybl-core.version>

    </properties>

    <profiles>
        <profile>
            <id>release</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>${maven.javadoc.version}</version>
                        <executions>
                            <execution>
                                <id>javadoc-aggregate-jar</id>
                                <phase>package</phase>
                                <inherited>false</inherited>
                                <goals>
                                    <goal>aggregate-jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-core</artifactId>
                <version>${powsybl-core.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-network-area-diagram</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>powsybl-single-line-diagram-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>powsybl-single-line-diagram-cgmes-dl-conversion</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>powsybl-single-line-diagram-cgmes-iidm-extensions</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>powsybl-single-line-diagram-cgmes-layout</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-diagram-util</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-diagram-test</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Test dependencies -->
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-iidm-impl</artifactId>
                <version>${powsybl-core.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-ieee-cdf-converter</artifactId>
                <version>${powsybl-core.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-iidm-test</artifactId>
                <version>${powsybl-core.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-ucte-converter</artifactId>
                <version>${powsybl-core.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-tools-test</artifactId>
                <version>${powsybl-core.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
